--- a/css/style-1.css
+++ b/css/style-1.css
@@ -114,26 +114,25 @@ p {
 	color: var(--brand-red);
 	text-decoration: none;
 	font-weight: 300;
+	transition: all ease-in-out 250ms;
 }
 
-.link-arrow i {
-	font-size: 12px;
-}
-
-/* .link-arrow::after {
+.link-arrow::after {
 	content: '\f054';
 	font-size: 12px;
 	font-family: var(--font-fa);
-} */
+	font-weight: 700;
+	margin-left: 5px;
+}
 
 .link-arrow:hover {
 	color: var(--brand-dark-gray);
-	transition: all ease-in 250ms;
+	text-decoration: none;
 }
 
-.link-arrow:hover > i {
-	transform: translateX(7px);
+.link-arrow:hover::after {
 	transition: all ease-in 250ms;
+	margin-left: 12px;
 }
 /* link-arrow */
 
