--- a/css/style-1.css
+++ b/css/style-1.css
@@ -1082,8 +1082,6 @@ button.regulations {
 	font-weight: 700;
 	margin-top: 20px;
 	font-size: 18px;
-	padding: 6px 30px;
-	border-radius: 4px;
 }
 
 .loto-banner__image img {
@@ -1100,7 +1098,7 @@ button.regulations {
 }
 
 .charity-text.charity-text--srecke {
-	background: var(--brand-light-blue-2);
+	background: var(--brand-purple);
 }
 
 .charity--srecke > .container::before {
@@ -1108,7 +1106,7 @@ button.regulations {
 }
 
 .charity--srecke > .container::after {
-	background: url(../images/e-srecke/plavo-zuta-zvezdica.svg) no-repeat;
+	background: url(../images/rezultati/Zvezdica.svg) no-repeat;
 }
 
 .esgg-hero--greb .esgg-hero__bg {
@@ -1206,6 +1204,57 @@ button.regulations {
 	display: block;
 }
 
+.five-games__wrapper {
+	padding: 30px 30px 50px;
+	box-shadow: 0 0 10px rgba(0,0,0,.3);
+	border-radius: 12px;
+	margin-top: -50px;
+	background: var(--brand-white);
+}
+
+.five-games__logo img {
+	width: 200px;
+	margin: 0 auto 30px;
+	display: block;
+}
+
+.five-games__wrapper__item {
+	box-shadow: 0 0 10px rgba(0,0,0,.2);
+	min-width: 158px;
+}
+
+.five-games__wrapper__item__img img {
+	border-radius: 0 0 50% 50%;
+}
+
+.five-games__wrapper__item__txt {
+	padding: 20px 15px;
+}
+
+.five-games__wrapper__item__txt p {
+	font-size: 16px;
+}
+
+.five-games__wrapper__item__txt__link {
+	margin: 15px 0 8px;
+	font-weight: 300;
+	font-size: 15px;
+}
+
+.five-games__wrapper__item__txt__link a {
+	text-decoration: none;
+}
+
+.five-games__wrapper__item__txt button {
+	font-size: 17px;
+	width: 100%;
+}
+
+.five-games__wrapper > .row > .col {
+	display: flex;
+	justify-content: center;
+}
+
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
 	/* MAIN BANNER >> */
@@ -1251,8 +1300,16 @@ button.regulations {
 		margin-bottom: 20px;
 	}
 
+	.loto-banner__image img {
+		width: 270px;
+	}
+
 	.loto-banner__text h2 {
-		font-size: 50px;
+		font-size: 60px;
+	}
+
+	.five-games__wrapper {
+		padding: 30px 10px 50px;
 	}
 }
 
@@ -1295,12 +1352,17 @@ button.regulations {
 	}
 
 	.loto-banner__text h2 {
-		font-size: 2.2rem;
+		font-size: 45px;
 	}
 
 	.loto-banner__logo {
 		width: 120px;
 		margin-bottom: 15px;
+	}
+
+	.loto-banner__image img {
+		width: 210px;
+		top: -30px;
 	}
 
 	.form-choose {
@@ -1313,6 +1375,13 @@ button.regulations {
 		margin-top: 1rem;
 	}
 
+	.five-games__wrapper {
+		padding: 30px 30px 50px;
+	}
+
+	.five-games__wrapper__item {
+		max-width: 190px;
+	}
 }
 
 /* Small devices (landscape phones, less than 768px) */
@@ -1342,7 +1411,10 @@ button.regulations {
 	}
 
 	.loto-banner__image img {
-		max-width: 200px;
+		position: relative;
+		width: 250px;
+		right: 0;
+		top: 0;
 	}
 
 	.loto-banner__text {
@@ -1487,6 +1559,9 @@ button.regulations {
 		margin-left: -15px;
 	}
 
+	.five-games__wrapper__item {
+		max-width: 240px;
+	}
 }
 
 /* Extra large devices */
