ubacen align-self

--- a/css/style-1.css
+++ b/css/style-1.css
@@ -999,6 +999,10 @@ button.regulations {
 	justify-content: center;
 }
 
+.srecke-item__img img {
+	align-self: center;
+}
+
 .srecke-item__text-big {
 	font-size: 18px;
 	font-weight: 700;
